--- a/index.html
+++ b/index.html
@@ -10,35 +10,34 @@
 
 <body>
   <ul>
-    <li><a href="#foto">Foto de Perfil</a></li>
-    <li><a href="#info">Informações</a></li>
+    <li><a href="#info">Sobre Mim</a></li>
     <li><a href="#hab">Habilidades</a></li>
     <li><a href="#pass">Passatempos</a></li>
-    <li><a href="https://www.youtube.com/c/ratoborrachudo" target="_blank">Blog</a></li>
   </ul>
   <h1>João Pedro Alves da Silva</h1>
   <img src="Trybe-Imagens/241482253_559209891988023_620769326ghfhfh5272305908_n.jpg" alt="Foto de perfil" width="400px"
     height="400px" id="foto">
   <p><strong>Foto de perfil</strong>, que utilizo na maioria de minhas Redes Sociais pois gosto muito.</p>
   </ul>
-  <h4>Informações:</h4>
+  <h4>Sobre mim:</h4>
   <p id="info"><em>Meu nome é <strong>João Pedro Alves</strong>, tenho <strong>18 anos</strong>, moro em <strong>Porto
         Alegre/RS</strong> e nasci no Brasil.</em></p>
   <a href="https://www.linkedin.com/in/jo%C3%A3o-pedro-alves-77198319a" target="_blank">linkedin</a>
   <a href="https://github.com/Joao7001" target="_blank">github</a>
-
+<p>Meus <strong>passatempos</strong> são:</p>
+  <ul id="pass">
+    <li>Jogar video games.</li>
+    <li>Arrumar teclados e etc.</li>
+    <li>Tentar programar sózinho.</li>
+  </ul>
   <h4>Habilidades:</h4>
   <ul id="hab">
     <li>Colaboração.</li>
     <li>Bom comportamento.</li>
     <li>Aprender Rapido.</li>
   </ul>
-  <h4>Passatempos:</h4>
-  <ul id="pass">
-    <li>Jogar video games.</li>
-    <li>Arrumar teclados e etc.</li>
-    <li>Tentar programar sózinho.</li>
-  </ul>
+    <li><a href="#foto">Minha foto</a></li>
+    <li><a href="https://www.youtube.com/c/ratoborrachudo" target="_blank">Blog</a></li>
 </body>
 
 </html>
