--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <title>Portifólio João Alves</title>
 </head>
 
@@ -20,9 +26,7 @@
   <p><strong>Foto de perfil</strong>, que utilizo na maioria de minhas Redes Sociais pois gosto muito.</p>
   </ul>
   <h4>Sobre mim:</h4>
-  <p id="info"><em>Meu nome é <strong>João Pedro Alves</strong>, tenho <strong>18 anos</strong>, moro em <strong>Porto
-        Alegre/RS</strong> e nasci no Brasil.</em></p>
-  <a href="https://www.linkedin.com/in/jo%C3%A3o-pedro-alves-77198319a" target="_blank">linkedin</a>
+  <p id="info"><em>Meu nome é <strong>João Pedro Alves</strong>, tenho <strong>18 anos</strong>, moro em <strong>Porto Alegre/RS</strong> e nasci no Brasil.</em></p>
   <a href="https://github.com/Joao7001" target="_blank">github</a>
   <p>Meus <strong>passatempos</strong> são:</p>
   <ul id="pass">
