Estilização do portifólio quase finalizada

--- a/index.html
+++ b/index.html
@@ -1,47 +1,74 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Portifólio João Alves</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
-  <title>Portifólio João Alves</title>
-</head>
-
-<body>
-  <ul>
-    <li><a href="#info">Sobre Mim</a></li>
-    <li><a href="#hab">Habilidades</a></li>
-    <li><a href="#pass">Passatempos</a></li>
-  </ul>
-  <h1>João Pedro Alves da Silva</h1>
-  <img src="Trybe-Imagens/241482253_559209891988023_620769326ghfhfh5272305908_n.jpg" alt="Foto de perfil" width="400px"
-    height="400px" id="foto">
-  <p><strong>Foto de perfil</strong>, que utilizo na maioria de minhas Redes Sociais pois gosto muito.</p>
-  </ul>
-  <h4>Sobre mim:</h4>
-  <p id="info"><em>Meu nome é <strong>João Pedro Alves</strong>, tenho <strong>18 anos</strong>, moro em <strong>Porto Alegre/RS</strong> e nasci no Brasil.</em></p>
-  <a href="https://github.com/Joao7001" target="_blank">github</a>
-  <p>Meus <strong>passatempos</strong> são:</p>
-  <ul id="pass">
-    <li>Jogar video games.</li>
-    <li>Arrumar teclados e etc.</li>
-    <li>Tentar programar sózinho.</li>
-  </ul>
-  <h4>Habilidades:</h4>
-  <ul id="hab">
-    <li>Colaboração.</li>
-    <li>Bom comportamento.</li>
-    <li>Aprender Rapido.</li>
-  </ul>
-  <li><a href="#foto">Minha foto</a></li>
-  <li><a href="https://www.youtube.com/c/ratoborrachudo" target="_blank">Blog</a></li>
-</body>
-
+  <body>
+    <div class="headder">
+      <ul>
+        <li><a href="#info">Sobre Mim</a></li>
+        <li><a href="#pass">Passatempos</a></li>
+        <li><a href="#hab">Habilidades</a></li>
+      </ul>
+    </div>
+    <div class="picture">
+      <h1>João Pedro Alves da Silva</h1>
+      <img
+        src="Trybe-Imagens/241482253_559209891988023_620769326ghfhfh5272305908_n.jpg"
+        alt="Foto de perfil"
+        width="400px"
+        height="400px"
+        id="foto"
+        class="foto"
+      />
+      <p>
+        <strong>Foto de perfil</strong>, que utilizo na maioria de minhas Redes
+        Sociais pois gosto muito.
+      </p>
+    </div>
+    <div class="sobre">
+      <h2 class="yellow">Sobre mim</h2>
+      <p id="info">
+        <em
+          >Meu nome é <strong>João Pedro Alves</strong>, tenho
+          <strong>18 anos</strong>, moro em <strong>Porto Alegre/RS</strong> e
+          nasci no Brasil.</em
+        >
+      </p>
+      <div class="button">
+        <a href="https://github.com/Joao7001" target="_blank">GITHUB</a>
+      </div>
+      <p>Meus <strong>passatempos</strong> são:</p>
+      <ul id="pass">
+        <li>Jogar video games.</li>
+        <li>Arrumar teclados e etc.</li>
+        <li>Tentar programar sózinho.</li>
+      </ul>
+      <h2 class="yellow">Habilidades</h2>
+      <ul id="hab">
+        <li>Colaboração.</li>
+        <li>Aprender Rapido.</li>
+        <li>Bom comportamento.</li>
+      </ul>
+    </div>
+    <div class="footer">
+      <li><a href="#foto">Minha foto</a></li>
+      <li>
+        <a href="https://www.youtube.com/c/ratoborrachudo" target="_blank"
+          >Blog</a
+        >
+      </li>
+    </div>
+  </body>
 </html>
