--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
           nasci no Brasil.</em
         >
       </p>
-      <div class="button">
-        <a href="https://github.com/Joao7001" target="_blank">GITHUB</a>
-      </div>
+      <a class="button" href="https://github.com/Joao7001" target="_blank"
+        >GITHUB</a
+      >
       <p>Meus <strong>passatempos</strong> são:</p>
       <ul id="pass">
         <li>Jogar video games.</li>
