Correção de ortografia

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         >
       </p>
       <a class="button" href="https://github.com/Joao7001" target="_blank"
-        >GITHUB</a
+        ><strong>Mais sobre meus estudos.</strong></a
       >
       <p>Meus <strong>passatempos</strong> são:</p>
       <ul id="pass">
         <li>Jogar video games.</li>
         <li>Arrumar teclados e etc.</li>
-        <li>Tentar programar sózinho.</li>
+        <li>Tentar programar sozinho.</li>
       </ul>
       <h2 class="yellow">Habilidades</h2>
       <ul id="hab">
