Ajuste no botão

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           nasci no Brasil.</em
         >
       </p>
-      <a class="button" href="https://github.com/Joao7001" target="_blank"
+      <a class="button aling" href="https://github.com/Joao7001" target="_blank"
         ><strong>Mais sobre meus estudos.</strong></a
       >
       <p>Meus <strong>passatempos</strong> são:</p>
