header and footer

--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
   </head>
 
   <body>
-    <div class="headder">
-      <ul>
-        <li><a href="#info">Sobre Mim</a></li>
-        <li><a href="#pass">Passatempos</a></li>
-        <li><a href="#hab">Habilidades</a></li>
-      </ul>
+    <div class="header">
+      <div class="inner_header">
+        <div class="logo_container">
+          <h1>J<span>P</span></h1>
+        </div>
+        <ul class="navigation">
+          <a href="#info"><li>Sobre Mim</li></a>
+          <a href="#pass"><li>Passatempos</li></a>
+          <a href="#hab"><li>Habilidades</li></a>
+        </ul>
+      </div>
     </div>
     <div class="picture">
       <h1>João Pedro Alves da Silva</h1>
@@ -62,13 +67,11 @@
         <li>Bom comportamento.</li>
       </ul>
     </div>
-    <div class="footer">
-      <li><a href="#foto">Minha foto</a></li>
-      <li>
+    <div class="header navigation">
+      <a href="#foto"><li>Minha foto</li></a>
         <a href="https://www.youtube.com/c/ratoborrachudo" target="_blank"
-          >Blog</a
+          ><li>Blog</li></a
         >
-      </li>
     </div>
   </body>
 </html>
