Correção de ortografia 2

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </ul>
     </div>
     <div class="header navigation">
-      <a href="#foto"><li>Minha foto</li></a>
+      <a href="#foto"><li>Foto</li></a>
       <a href="https://www.youtube.com/c/ratoborrachudo" target="_blank"
         ><li>Blog</li></a
       >
